--- a/src/css/Progress.css
+++ b/src/css/Progress.css
@@ -31,7 +31,6 @@
 .progress-end-incorrect-answers {
 	display: table;
 	table-layout: fixed;
-	column-gap: 10px;
 	width: 100%;
 	margin-top: 24px;
 	row-gap: 8px;
@@ -46,6 +45,11 @@
 	word-wrap: break-word;
 	padding-top: 2px;
 	padding-bottom: 2px;
+  	border-left: 8px solid transparent;
+}
+
+.progress-end-incorrect-answers > div > *:first-child {
+  	border-left: 0;
 }
 
 .progress-end-button-container {
